--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,29 +1,26 @@
 {
-   "manifest_version": 3,
-   "name": "Telsia",
-   "version": "1.0",
-   "description": "Reduces eye strain with a custom colour overlay. Improves readability for users with Dyslexia and Visual Stress.",
-   "icons": {
+  "manifest_version": 3,
+  "name": "Telsia",
+  "version": "1.0",
+  "description": "Reduces eye strain with a custom colour overlay. Improves readability for users with Dyslexia, Irlen's Syndrome and Visual Stress.",
+  "icons": {
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-   "permissions": ["storage"],
-   "action": {
-     "default_popup": "popup.html",
-     "default_icon": {
-       "16": "images/icon16.png",
-       "32": "images/icon32.png",
-       "48": "images/icon48.png",
-       "128": "images/icon128.png"
-     }
-   },
-   "background": {
-     "service_worker": "service-worker.js"
-   },
-   "content_scripts": [
-     {
-       "matches": ["http://*/*", "https://*/*"],
-       "js": ["content.js"]
-     }
-   ]
- }
+  "permissions": ["storage"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "32": "images/icon32.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["content.js"]
+    }
+  ]
+}
