--- a/Chrome Source/manifest.json
+++ b/Chrome Source/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Telsia",
+  "name": "Telsia: Eye Strain Reduction",
+  "short_name": "Telsia",
   "author": "George Forse",
-  "homepage_url": "https://bitwarden.com",
+  "homepage_url": "https://telsia.org",
   "version": "1.0",
   "description": "Reduces eye strain with a custom colour overlay. Improves readability for users with Dyslexia, Irlen's Syndrome and Visual Stress.",
   "icons": {
@@ -29,7 +30,8 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_start"
     }
   ]
 }
