--- a/Source/manifest.chrome.json
+++ b/Source/manifest.chrome.json
@@ -22,8 +22,7 @@
     }
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "storage": {
     "managed_schema": "schema.json"
