--- a/Source/manifest.firefox.json
+++ b/Source/manifest.firefox.json
@@ -35,7 +35,10 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "telsia@telsia.org",
-      "strict_min_version": "109.0"
+      "strict_min_version": "112.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
