--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "telsia",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Build scripts for the Telsia browser extension.",
   "private": true,
   "scripts": {
     "clean": "echo \"Cleaning Builds and Release folders...\" && npx rimraf Builds Release",
-    "build:base:chrome": "echo \"Copying base files for Chrome...\" && npx cpx2 \"Source/**/*\" Builds/chrome --ignore \"Source/manifest*.json,Source/content*.js\"",
-    "build:manifest:chrome": "echo \"Copying Chrome manifest...\" && npx cpy-cli Source/manifest.chrome.json Builds/chrome --rename manifest.json --flat",
-    "build:content:chrome": "echo \"Copying Chrome content script...\" && npx cpy-cli Source/content.chrome.js Builds/chrome --rename content.js --flat",
+    "build:base:chrome": "echo \"Copying base files for Chrome...\" && npx cpx2 \"Source/**/*\" Builds/chrome --ignore \"Source/**/*.chrome.js,Source/**/*.firefox.js\" && npx cpx2 \"Source/**/*.chrome.js\" Builds/chrome && node -e \"const fs=require('fs'),p=require('path');(function w(d){for(const e of fs.readdirSync(d,{withFileTypes:true})){const fp=p.join(d,e.name);if(e.isDirectory())w(fp);else if(e.name.endsWith('.chrome.js'))fs.renameSync(fp,p.join(p.dirname(fp),e.name.replace('.chrome.js','.js')))}})(\\\"Builds/chrome\\\")\"",
     "update:version:chrome": "echo \"Updating Chrome manifest version...\" && node scripts/update-manifest-version.mjs Builds/chrome/manifest.json",
-    "build:chrome": "echo \"Building Chrome version...\" && npm run build:base:chrome && npm run build:manifest:chrome && npm run build:content:chrome && npm run update:version:chrome ",
-    "build:base:firefox": "echo \"Copying base files for Firefox...\" && npx cpx2 \"Source/**/*\" Builds/firefox --ignore \"Source/manifest*.json,Source/content*.js\"",
-    "build:manifest:firefox": "echo \"Copying Firefox manifest...\" && npx cpy-cli Source/manifest.firefox.json Builds/firefox --rename manifest.json --flat",
-    "build:content:firefox": "echo \"Copying Firefox content script...\" && npx cpy-cli Source/content.firefox.js Builds/firefox --rename content.js --flat",
+    "build:chrome": "echo \"Building Chrome version...\" && npm run build:base:chrome && npm run update:version:chrome",
+    "build:base:firefox": "echo \"Copying base files for Firefox...\" && npx cpx2 \"Source/**/*\" Builds/firefox --ignore \"Source/**/*.chrome.js,Source/**/*.firefox.js\" && npx cpx2 \"Source/**/*.firefox.js\" Builds/firefox && node -e \"const fs=require('fs'),p=require('path');(function w(d){for(const e of fs.readdirSync(d,{withFileTypes:true})){const fp=p.join(d,e.name);if(e.isDirectory())w(fp);else if(e.name.endsWith('.firefox.js'))fs.renameSync(fp,p.join(p.dirname(fp),e.name.replace('.firefox.js','.js')))}})(\\\"Builds/firefox\\\")\"",
     "update:version:firefox": "echo \"Updating Firefox manifest version...\" && node scripts/update-manifest-version.mjs Builds/firefox/manifest.json",
-    "build:firefox": "echo \"Building Firefox version...\" && npm run build:base:firefox && npm run build:manifest:firefox && npm run build:content:firefox && npm run update:version:firefox",
+    "build:firefox": "echo \"Building Firefox version...\" && npm run build:base:firefox && npm run update:version:firefox",
     "build": "echo \"Starting full build...\" && npm run clean && npm run build:chrome && npm run build:firefox && echo \"Builds complete.\"",
     "package:chrome": "echo \"Packaging Chrome version...\" && node package.mjs Builds/chrome Release/telsia-chrome",
     "package:firefox": "echo \"Packaging Firefox version...\" && node package.mjs Builds/firefox Release/telsia-firefox",
